fix: add padding to various pages for improved layout on mobile

--- a/web/resources/sass/pages/_discover.scss
+++ b/web/resources/sass/pages/_discover.scss
@@ -25,6 +25,7 @@
 
                 @media (max-width: $md) {
                     width: 100%;
+                    padding: 20px 0 80px 0;
                 }
 
                 &-title {
